--- a/fake_news_detection_v1.ipynb
+++ b/fake_news_detection_v1.ipynb
@@ -1060,6 +1060,7 @@
     "<p>\n",
     "To do:\n",
     "    <ul>\n",
+    "        <li>Add more datapoints and more pre preprocessing if possible</li>",
     "        <li>Generate POS tags for syntactical analysis\n",
     "        <li>Generate feature vector by semantic analysis (Empath - lexicon) </li>\n",
     "        <li>Combine all </li>\n",
